projects/lungmen.akn/src/apps/actual-budget/actual-budget.statefulset.yaml
---
# trunk-ignore(checkov/CKV_K8S_15,checkov/CKV_K8S_43): Not agreed with these policies about the ImagePullPolicy=Always and digest verification.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: actual-budget
spec:
  serviceName: actual-budget
  replicas: 1
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: persistent
    spec:
      automountServiceAccountToken: false
      containers:
        # trunk-ignore(trivy): Everything about security context cannot be configured for the official image.
        - name: actual-budget
          image: ghcr.io/actualbudget/actual-server
          livenessProbe:
            httpGet:
              path: /
              port: http
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: persistent
              mountPath: /data
            - name: config
              mountPath: /app/config.json
              subPath: config.json
              readOnly: true

      volumes:
        - name: config
          secret:
            secretName: actual-budget-configuration
            defaultMode: 0600
      securityContext:
        runAsNonRoot: true
        runAsUser: 38069
        runAsGroup: 38069
        fsGroup: 38069
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: persistent
      spec:
        accessModes:
          - ReadWriteOnce
        # -- Retain policy: a stray PVC/StatefulSet deletion detaches the disk instead of
        # destroying it (see proxmox-csi-plugin.helmvalues/default.yaml).
        storageClassName: proxmox-lvmthin-ext4-retain
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
spec:
  selector:
    app.kubernetes.io/name: actual-budget
    app.kubernetes.io/instance: actual-budget
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
