projects/lungmen.akn/src/apps/actual-budget/actual-budget.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    link.argocd.argoproj.io/external-link: https://budget.chezmoi.sh
  name: actual-budget-websecure
spec:
  hostnames:
    - budget.chezmoi.sh
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: kube-system
      sectionName: chezmoi.sh-websecure
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: chezmoi.sh-websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: actual-budget
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
